change meta desc

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Unlock global growth with Middle Man. Your gateway to Turkey suppliers & European resellers. Cross-border business solutions.">
+    <meta name="keywords"
+        content="Business consulting for overseas expansion, Supplier sourcing in Turkey, Reseller linking in Europe, Exporting from Turkey to Europe, Importing to Europe from Turkey, Cross-border business solutions">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
