change contact info

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             <div class="international-phone">
                 <span>International Inquiries:</span>
                 <a href="tel:+90 541 182 6269">+90 541 182 6269</a>
-                <a href="tel:+358 41 490 6269">/ +358 41 490 6269</a>
             </div>
             <div class="national-phone">
                 <span>Türkiye:</span>
-                <a href="tel:+90 530 167 21 71">+90 530 167 21 71</a>
+                <a href="tel:+90 541 182 6269">+90 541 182 6269</a>
+                <a href="tel:+90 530 167 21 71">/ +90 530 167 21 71</a>
             </div>
         </div>
         <div class="bottom-contact-form">
