change site completely

--- a/contact.html
+++ b/contact.html
@@ -50,81 +50,13 @@
             </div>
         </nav>
     </div>
-    <div class="hero-section-container">
-        <div class="hero-section-parag">
-            <div class="hero-section-parag-h">
-                <h1>Expand Your Business in Europe and Turkiye</h1>
-            </div>
-            <div class="hero-section-parag-p">
-                <p>
-                    Our experienced team offers a wide range of services tailored to meet the needs of European clients
-                    looking to do business in Turkiye and Turkish businesses looking to expand into Europe.</p>
-                <button onclick="location.href='./industries.html'" type="button">Learn More</button>
-            </div>
-
-        </div>
-        <div class="hero-section">
-            <div class="hero-content">
-                <h1>Middle Man</h1>
-                <p>Global Business Expansion Service</p>
-            </div>
-        </div>
-
+    <div class="contact-page-hero">
+        <h1>Partner up and Consult</h1>
+        <p>
+            For any inquiries please email us at contact@middlemantr.com or use the form below.</p>
     </div>
-    <div class="about-section">
-        <div class="item">
 
-            <div class="about-content">
-                <div class="about-heading">
-                    <h2>About</h2>
-                </div>
-                <p>
-                    Middle Man is a leading business consultancy and network service provider, headquartered in Istanbul
-                    and Helsinki. With an extensive network in various industries, we specialize in helping businesses
-                    expand their market reach overseas. Our mission is to empower clients to thrive in the global
-                    marketplace, offering strategic guidance and unlocking growth opportunities.</p>
-            </div>
-            <div class="about-section-img-container">
-                <img src="./assets/images/buildingabout.jpeg" alt="">
-            </div>
-        </div>
 
-    </div>
-    <div class="sales-outsource-section">
-        <div class="sales-outsource-top">
-            <h1>Sales Outsourcing</h1>
-            <p>
-
-                Middle Man is the partner you need for all your sales outsourcing needs. With our team of experienced
-                sales professionals and strong network, we bring you quick results. So, sit back and relax, knowing that
-                your sales targets are in good hands with us.
-            </p>
-        </div>
-        <div class="sales-outsource-bottom">
-            <div class="">
-                <h1>Business Development</h1>
-                <p>At Business Development, we know that expanding and increasing sales can be daunting. That's why
-                    we're here to help. Our team of industry experts specialize in expanding businesses into new
-                    markets, and increasing sales. No matter what your industry is, we're here to help you achieve your
-                    goals.</p>
-            </div>
-            <div class="">
-                <h1>Market Research</h1>
-                <p>Our in-depth market research service is the key to understanding your business terrain, reducing
-                    risks and uncovering opportunities. We provide comprehensive data collection and analysis to help
-                    you define your marketing and Go to Market strategy. With insights on customers, competitors, market
-                    trends, and more, we'll help you make informed decisions that lead to success.</p>
-            </div>
-        </div>
-    </div>
-    <div class="homepage-sales-training">
-        <h1>Sales Training</h1>
-        <p>We offer a comprehensive sales training service that equips your team with the necessary skills and
-            strategies to exceed your sales targets. With our expert guidance, your team will become a force to be
-            reckoned with in your industry. Let's create a successful super sales team together, fueled by success and
-            results.</p>
-        <button  onclick="location.href='./salestraining.html'" type="button">Learn More</button>
-    </div>
     <div class="contact-form">
 
         <div class="bottom-contact-form">
@@ -149,7 +81,7 @@
                         <label for="email">Email*</label>
                         <input type="text" id="email" name="email" placeholder="Enter your email" required>
                     </div>
-                
+
                 </div>
 
                 <div class="form-bottom-section">
@@ -175,9 +107,6 @@
         </div>
 
     </div>
-
-    
-
     <script src="script.js"></script>
 </body>
 
