--- a/salestraining.html
+++ b/salestraining.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+
     <div class="header navbar ">
         <nav class="">
             <div class="logo-container">
@@ -50,80 +51,80 @@
             </div>
         </nav>
     </div>
-    <div class="hero-section-container">
-        <div class="hero-section-parag">
-            <div class="hero-section-parag-h">
-                <h1>Expand Your Business in Europe and Turkiye</h1>
-            </div>
-            <div class="hero-section-parag-p">
-                <p>
-                    Our experienced team offers a wide range of services tailored to meet the needs of European clients
-                    looking to do business in Turkiye and Turkish businesses looking to expand into Europe.</p>
-                <button onclick="location.href='./industries.html'" type="button">Learn More</button>
-            </div>
 
-        </div>
-        <div class="hero-section">
-            <div class="hero-content">
-                <h1>Middle Man</h1>
-                <p>Global Business Expansion Service</p>
-            </div>
-        </div>
-
-    </div>
-    <div class="about-section">
-        <div class="item">
-
-            <div class="about-content">
-                <div class="about-heading">
-                    <h2>About</h2>
-                </div>
-                <p>
-                    Middle Man is a leading business consultancy and network service provider, headquartered in Istanbul
-                    and Helsinki. With an extensive network in various industries, we specialize in helping businesses
-                    expand their market reach overseas. Our mission is to empower clients to thrive in the global
-                    marketplace, offering strategic guidance and unlocking growth opportunities.</p>
-            </div>
-            <div class="about-section-img-container">
-                <img src="./assets/images/buildingabout.jpeg" alt="">
-            </div>
-        </div>
-
-    </div>
-    <div class="sales-outsource-section">
-        <div class="sales-outsource-top">
-            <h1>Sales Outsourcing</h1>
+    <div class="sales-training-hero">
+        <div class="sales-training-hero-text">
+            <h1>Sales Training</h1>
             <p>
-
-                Middle Man is the partner you need for all your sales outsourcing needs. With our team of experienced
-                sales professionals and strong network, we bring you quick results. So, sit back and relax, knowing that
-                your sales targets are in good hands with us.
-            </p>
-        </div>
-        <div class="sales-outsource-bottom">
-            <div class="">
-                <h1>Business Development</h1>
-                <p>At Business Development, we know that expanding and increasing sales can be daunting. That's why
-                    we're here to help. Our team of industry experts specialize in expanding businesses into new
-                    markets, and increasing sales. No matter what your industry is, we're here to help you achieve your
-                    goals.</p>
-            </div>
-            <div class="">
-                <h1>Market Research</h1>
-                <p>Our in-depth market research service is the key to understanding your business terrain, reducing
-                    risks and uncovering opportunities. We provide comprehensive data collection and analysis to help
-                    you define your marketing and Go to Market strategy. With insights on customers, competitors, market
-                    trends, and more, we'll help you make informed decisions that lead to success.</p>
-            </div>
+                Sales Training
+                We offer a comprehensive sales training service that equips your team with the necessary skills and
+                strategies to exceed your sales targets. With our expert guidance, your team will become a force to be
+                reckoned with in your industry. Let's create a successful super sales team together, fueled by success
+                and results.</p>
         </div>
     </div>
-    <div class="homepage-sales-training">
-        <h1>Sales Training</h1>
-        <p>We offer a comprehensive sales training service that equips your team with the necessary skills and
-            strategies to exceed your sales targets. With our expert guidance, your team will become a force to be
-            reckoned with in your industry. Let's create a successful super sales team together, fueled by success and
-            results.</p>
-        <button  onclick="location.href='./salestraining.html'" type="button">Learn More</button>
+
+    <div class="sales-training-card-container">
+        <div class="sales-training-card-wrapper">
+            <div class="sales-training-card sales-training-card-opposite">
+                <div class="sales-training-card-text">
+                    <h1>Generate Leads from 0
+                    </h1>
+                    <p>Don't let a lack of leads hold your business back. Our expert business consultants will train
+                        your sales team on how to generate leads using the latest technologies and techniques. From
+                        finding potential leads, right through to reaching decision makers, we'll help you develop a
+                        comprehensive lead generation strategy that gets results.</p>
+                </div>
+                <div class="sales-training-card-img-container">
+                    <img src="./assets/images/salestraining/16.jpeg" alt="">
+                </div>
+
+            </div>
+            <hr class="sales-card-outline">
+            <div class="sales-training-card">
+                <div class="sales-training-card-text">
+                    <h1>Outbound Calls and Email Training
+
+                    </h1>
+                    <p>Outreaching to potential customers can be daunting, but with the right techniques, it can be a
+                        game-changer for your business. Our Outbound Calls and Email Training services will give your
+                        sales team the tools they need to make a positive first impression every time. From email
+                        subject lines to phone scripts, we cover it all. Our clients have seen up to a 75% increase in
+                        response rates, booked meetings, and pipeline growth.</p>
+                </div>
+                <div class="sales-training-card-img-container">
+                    <img src="./assets/images/salestraining/18.jpeg" alt="">
+                </div>
+            </div>
+            <hr class="sales-card-outline">
+            <div class="sales-training-card sales-training-card-opposite">
+                <div class="sales-training-card-text">
+                    <h1>How to Persuade
+                    </h1>
+                    <p>Successful salesmanship is rooted in effective persuasion. Our proven approach to teaching this
+                        skill can help propel your sales team to new levels of success. We'll teach you how to overcome
+                        objections even before they arise, boosting your conversion rates.</p>
+                </div>
+                <div class="sales-training-card-img-container">
+                    <img src="./assets/images/salestraining/19.jpeg" alt="">
+                </div>
+            </div>
+            <hr class="sales-card-outline">
+            <div class="sales-training-card">
+                <div class="sales-training-card-text">
+                    <h1>Real Life Practices
+                    </h1>
+                    <p>Our comprehensive program covers all aspects of the sales process, from lead generation to
+                        closing the deal. With our hands-on approach, you’ll have the opportunity to put what you’ve
+                        learned into practice in real-life scenarios. You'll walk away with the skills and confidence
+                        you need to succeed in today’s competitive business landscape.</p>
+                </div>
+                <div class="sales-training-card-img-container">
+                    <img src="./assets/images/salestraining/17.jpeg" alt="">
+                </div>
+
+            </div>
+        </div>
     </div>
     <div class="contact-form">
 
@@ -149,7 +150,7 @@
                         <label for="email">Email*</label>
                         <input type="text" id="email" name="email" placeholder="Enter your email" required>
                     </div>
-                
+
                 </div>
 
                 <div class="form-bottom-section">
@@ -175,8 +176,6 @@
         </div>
 
     </div>
-
-    
 
     <script src="script.js"></script>
 </body>
