--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="sales-outsource-bottom">
             <div class="">
                 <h1>Business Development</h1>
-                <p>At Business Development, we know that expanding and increasing sales can be daunting. That's why
+                <p>We know that expanding and increasing sales can be daunting. That's why
                     we're here to help. Our team of industry experts specialize in expanding businesses into new
                     markets, and increasing sales. No matter what your industry is, we're here to help you achieve your
                     goals.</p>
